@@ -1,3 +1,8 @@
+Mon May 25 04:30:56 GMT 2015  Olly Betts <olly@survex.com>
+
+	* tests/harness/testsuite.h: Simplify FAIL_TEST and SKIP_TEST
+	  slightly.
+
 Mon May 25 04:30:03 GMT 2015  Olly Betts <olly@survex.com>
 
 	* tests/harness/backendmanager_remotetcp.cc: Don't leave an extra fd
